stack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Stack para observabilidade na AWS

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: ID da VPC

Resources:



  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Habilita acesso ao servidor
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9090
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9093
          ToPort: 9093
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9000
          ToPort: 9000
          CidrIp: 0.0.0.0/0




  MyContainer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-008d819eefb4b5ee4
      InstanceType: t2.medium
      SecurityGroupIds:
        - !Ref MySecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo -i
          apt-get update -y
          apt-get install -y docker.io
          usermod -aG docker ubuntu
          systemctl enable docker
          curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          chmod +x /usr/local/bin/docker-compose

          cd ~

          curl -L "https://github.com/GabrielPauloMai/observability/archive/master.tar.gz" | tar -xz --strip-components=2 "observability-master/cloudformation"

          sudo sysctl -w vm.max_map_count=262144

          export INSTANCE_IP=$(!GetAtt MyContainer.PublicIp)

          sudo docker-compose up -d

          
  
Outputs:
  InstanceIp:
    Description: IP da instancia
    Value: !GetAtt MyContainer.PublicIp
    Export:
      Name: InstanceIp
